[gd_scene load_steps=3 format=3 uid="uid://c24ks6s1fm2rt"]

[ext_resource type="Script" path="res://scenes/buttons/game_button.gd" id="1_j72v7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ngaa"]
size = Vector2(25, 55)

[node name="btn_ok" type="Node2D"]
script = ExtResource("1_j72v7")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_4ngaa")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
